  - Scalelist: More strict validation for parameters in scalelist up.

  v1.9.7:
  - Scalelist: Run cleanup instances after uinstall in DB by `force_db_cleanup` flag.
  - RestAPI: rename `result_propeties` to `result_properties`.

  v1.9.8:
  - Scalelist: Use `get_all_results` in `cleanup_deployments.py` and
    `_get_transaction_instances`. (Logic available by flag `all_results` for 4.4+
    manager only).

  v1.10.0:
  - Scalelist: Add `node_sequence` for override relationships.
  - Terminal: Hide debug messages.
  - Terminal: Filter warnings and critical errors.

  v1.10.1:
  - Deployment proxy: Remove only downloaded wagons

  v1.10.2:
  - Deployment proxy: Support dict as list of plugins.

  v1.11.0:
  - Scalelist: add wait for tasks to finish in failed workflow.
  - Remove force_db_cleanup functionality.

  v1.11.2:
  - Scalelist: Fix wait so that it doesn't fail on unhandled runtime errors.

  v1.12.0:
  - Rest: Support send bunch request groups in one action.
  - Move terminal and connection logic to separate package.

  v1.12.1:
  - Rest: Update SDK and support save headers/cookies to runtime properties.
  - Rest: Autodetext content type by default

  v1.12.2:
  - Rest: Support raw_payload in rest sdk
  - Rest: Support hardcoded translation_format version in rest sdk
  - Rest: Support prerender template in rest sdk

  v1.12.3:
  - Rest: Support auth headers
  - Rest: Add 'save_path' to cloudify.rest.Requests

  v1.12.4:
  - Rest: Update SDK==0.0.6
  - Rest: Hide calls from response

  v1.12.5:
  - Rest: Update SDK==0.0.7
  - Rest: Add toxml filter
  - Rest: Failback to json if can't detect content type

  v1.13.0:
  - Rest: merge parameters in property and in call
  - Secrets: Add support manage secrets from blueprint
  - Fix Issue in File type when using use_sudo.

  v1.14.0:
  - Rest: use auth parameters from action inputs
  - Rest: support `files_raw`/`raw_files` and `payload_raw`/`raw_payload`

  v1.15.0:
  - Add resumable flag for all operations.