@@ -1,3 +1,3 @@
 cloudify-plugins-common===3.4.2
 cloudify-rest-client===4.0
-https://github.com/cloudify-incubator/cloudify-utilities-plugins-sdk/archive/0.0.9.zip#egg=cloudify-utilities-plugins-sdk==0.0.9
+https://github.com/cloudify-incubator/cloudify-utilities-plugins-sdk/archive/0.0.10.zip#egg=cloudify-utilities-plugins-sdk==0.0.10
