@@ -1,3 +1,3 @@
 cloudify-plugins-common==3.4.2
 cloudify-rest-client==4.0
--e git+https://github.com/cloudify-incubator/cloudify-utilities-plugins-sdk.git@0.0.9#egg=cloudify-utilities-plugins-sdk
+-e git+https://github.com/cloudify-incubator/cloudify-utilities-plugins-sdk.git@0.0.10#egg=cloudify-utilities-plugins-sdk
