@@ -202,6 +202,10 @@ data_types:
         description: >
           optional, command for close connection, default 'exit'
         default: exit
+      smart_device:
+        description: >
+          optional, use shell extension
+        default: false
 
   cloudify.datatypes.File:
     properties:
