@@ -1,4 +1,4 @@
-# Copyright (c) 2017-2018 Cloudify Platform Ltd. All rights reserved
+# Copyright (c) 2017-2019 Cloudify Platform Ltd. All rights reserved
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -35,7 +35,7 @@ setuptools.setup(
     install_requires=[
         'cloudify-plugins-common>=3.4.2',
         'cloudify-rest-client>=4.0',  # deployment_proxy
-        'cloudify-utilities-plugins-sdk==0.0.9',  # terminal, rest
+        'cloudify-utilities-plugins-sdk==0.0.10',  # terminal, rest
         'pycrypto',  # ssh_key
         'pyyaml']  # cloudinit and rest
 )
